--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -65,7 +65,7 @@ body {
     white-space: nowrap;
   }
   .dlhorizontal dd {
-    margin-left: 200px;
+    margin-left: 220px;
     word-wrap: break-word;
   }
 }
